# RSTools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: log_advanced.cpp  log_basic.cpp  main.cpp
include/RST/: RST.hpp
include/RST/color/: Color.hpp
include/RST/crypto/: Crypto.hpp  SHA256.hpp
include/RST/log/: Log.hpp  LogLevel.hpp  LogMessage.hpp  LogRegistry.hpp  Logger.hpp  ScopedTimer.hpp  Sinks.hpp
include/RST/log/Constants/: Terminal.hpp
include/RST/log/Format/: Formatter.hpp
include/RST/log/Sinks/: ASink.hpp  CallbackSink.hpp  ConsoleSink.hpp  FileSink.hpp  ISink.hpp  NullSink.hpp  OStreamSink.hpp  RotatingFileSink.hpp  Sink.hpp
include/RST/maths/: Constants.hpp  Maths.hpp  Random.hpp  Vector.hpp
include/RST/parser/: ArgParser.hpp  Parser.hpp
include/RST/string/: Join.hpp  Split.hpp  String.hpp  ToLower.hpp  ToUpper.hpp  Trim.hpp
include/RST/system/: System.hpp  SystemInfo.hpp
include/RST/test/: RSTest.hpp
include/RST/time/: FrameTimer.hpp  Time.hpp  Timer.hpp
src/crypto/: SHA256.cpp
src/log/: Log.cpp  LogLevel.cpp  LogRegistry.cpp  Logger.cpp
src/log/Format/: Formatter.cpp
src/log/Sinks/: ConsoleSink.cpp  FileSink.cpp  RotatingFileSink.cpp
src/parser/: ArgParser.cpp
src/string/: Join.cpp  Split.cpp  ToLower.cpp  ToUpper.cpp  Trim.cpp
src/system/: SystemInfo.cpp
src/time/: FrameTimer.cpp  Timer.cpp
tests/: CMakeLists.txt  main.cpp
tests/log/: extras_sinks_tests.cpp  formatter_tests.cpp  logger_tests.cpp  registry_tests.cpp  simples_sinks_tests.cpp
tests/maths/: mathsTests.cpp
